--- a/resources/[scripts]/[Téléphone]/gcphone/html/static/config/config.json
+++ b/resources/[scripts]/[Téléphone]/gcphone/html/static/config/config.json
@@ -103,6 +103,17 @@
           "number": "mechanic"
         }
       }]
+    },
+    {
+      "display": "Avocat",
+      "icon": "/html/static/img/icons_app/avocat.png",
+      "subMenu": [{
+        "title": "Envoyer un message",
+        "eventName": "esx_addons_gcphone:call",
+        "type": {
+          "number": "avocat"
+        }
+      }]
     }
   ],
 
