ESX - Sync - Debug global

--- a/resources/[scripts]/[Téléphone]/gcphone/html/static/config/config.json
+++ b/resources/[scripts]/[Téléphone]/gcphone/html/static/config/config.json
@@ -116,6 +116,17 @@
       }]
     },
     {
+      "display": "Sheriff - BCSO",
+      "icon": "/html/static/img/icons_app/sheriff.png",
+      "subMenu": [{
+        "title": "Envoyer un message",
+        "eventName": "esx_addons_gcphone:call",
+        "type": {
+          "number": "sheriff"
+        }
+      }]
+    },
+    {
       "display": "Avocat",
       "icon": "/html/static/img/icons_app/avocat.png",
       "subMenu": [{
